--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "qlik-auth-office365",
     "version": "0.1.0",
     "description": "A module for simplyfing OAuth2 authentication with Office 365 for the Qlik Sense",
-    "main": "index.js",
+    "main": "service.js",
     "author": "Manuel Romero",
     "license": "MIT",
     "dependencies": {
