--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "dependencies": {
         "express": "~4.14.0",
-        "qlik-auth": ">= 1.1.0",
+        "qlik-auth": "1.2.3",
         "oauth": "^0.9.14"
     },
     "engine": "node >= 0.4.0",
